# symmetry

./: .dir-locals.el  .gitignore  .hgignore  CMakeLists.txt  README  README.md  orgfile.org  premake4.lua  todo.txt
.github/workflows/: default.yml
assets/: config.cfg  ground.ent  keybindings.cfg  light.ent  player.ent  test.symtres  test_scene.symtres
assets/entities/: Game_End_Trigger.symtres  Spot.symtres  Suzanne.symtres  collision_default.symtres  cube.symtres  cube_uv.symtres  default.symtres  door.symtres  door_blue.symtres  door_green.symtres  door_red.symtres  door_red_green.symtres  door_rgb.symtres  fill_light.symtres  floor_tile.symtres  pickup_health.symtres  pickup_key_blue.symtres  pickup_key_green.symtres  pickup_key_red.symtres  player_start.symtres  sponza.symtres  trigger.symtres  turret.symtres  turret_neg_135.symtres  turret_neg_45.symtres  turret_neg_90.symtres  turret_pos_135.symtres  turret_pos_45.symtres  turret_pos_90.symtres  wall_tile.symtres
assets/models/: cube.symbres  default.pamesh  floor_tile.symbres  muzzle_flash.symbres  pickup_health.symbres  pickup_key.symbres  player_weapon.symbres  quad.symbres  sphere.symbres  suzanne.symbres  wall_tile.symbres
assets/scenes/: Level_1.symtres  default.symtres  scene_1.symtres  scene_2.symtres
assets/shaders/: blinn_phong.frag  blinn_phong.frag.orig  blinn_phong.vert  common.glsl  commonFrag.glsl  commonVert.glsl  debug.frag  debug.vert  deferred_light.frag  deferred_light.vert  fbo.frag  fbo.vert  fog.glsl  gui.frag  gui.vert  im_geom.frag  im_geom.vert  phong.frag  phong.vert  phongCommon.glsl  phongTextured.frag  quad.frag  quad.vert  simple.frag  simple.vert  sprite.frag  sprite.vert  unshaded.frag  unshaded.vert  unshaded_textured.frag  unshaded_textured.vert
assets/textures/: concrete_7241.tga  gui_skin.tga  sprite_map.tga
blender_addon/io_symmetry_exp/: __init__.py  exporter.py
include/SDL2/: SDL_config.h  SDL_config_linux.h  SDL_config_windows.h
include/common/: nuklear.h
include/common/glad/: glad.h
include/common/newton/: Newton.h
include/common/soloud/: soloud_audiosource.h  soloud_openmpt.h  soloud_wav.h
include/glad/: glad.h
include/linux/ode/: collision.h  objects.h  ode.h  odecpp_collision.h  version.h
include/linux/sdl2/: SDL_config.h  SDL_revision.h  SDL_stdinc.h
include/windows/ode/: common.h  error.h
lib/linux/ode/: libode.so.6
lib/mac/ode/: libode.0.16.0.dylib  libode.dylib
lib/mac/soloud/: libsoloud.dylib
lib/windows/newton/: newton.exp  newton.lib  newton_d.exp  newton_d.lib
lib/windows/ode/: ode_double.lib  ode_doubled.lib
lib/windows/sdl2/: SDL2d.lib  SDL2maind.lib
lib/windows/soloud/: soloud_static_x64.lib  soloud_static_x64_d.lib  soloud_x64.exp  soloud_x64.lib  soloud_x64_d.exp  soloud_x64_d.lib
libs/debug/win64_msvc/: OpenAL32.lib
libs/release/win64_msvc/: OpenAL32.lib  SDL2.lib
misc/: ed.bat  launch_cmd.lnk  setup_env.bat
src/: array.c  array.h  array_str.h  bounding_volumes.c  bounding_volumes.h  camera.c  camera.h  common.h  components.h  config_vars.c  config_vars.h  editor.c  editor.h  entity.c  entity.h  event.h  file_io.c  file_io.h  framebuffer.c  framebuffer.h  game.c  game.h  geometry.c  geometry.h  gl_load.c  gl_load.h  glad.c  gui.c  gui.h  hashmap.c  hashmap.h  input.c  input.h  light.c  light.h  linmath.c  linmath.h  log.c  log.h  main.c  (+27 more)
src/common/: array.c  array.h  array_str.h  common.h  hashmap.c  hashmap.h  limits.h  linmath.c  linmath.h  log.c  log.h  memory_utils.c  memory_utils.h  num_types.h  parser.c  parser.h  string_utils.c  string_utils.h  utils.c  utils.h  variant.c  variant.h  version.h
src/game/: bounding_volumes.c  bounding_volumes.h  camera.c  camera.h  config_vars.c  config_vars.h  console.c  console.h  debug_vars.c  debug_vars.h  door.c  door.h  editor.c  editor.h  enemy.c  enemy.h  entity.c  entity.h  event.c  event.h  file_io.c  file_io.h  framebuffer.c  framebuffer.h  game.c  game.h  geometry.c  geometry.h  gl_load.c  gl_load.h  glad.c  gui.c  gui.h  gui_game.c  gui_game.h  im_render.c  im_render.h  input.c  input.h  light.c  (+33 more)
src/libsymmetry/: bounding_volumes.c  bounding_volumes.h  camera.c  camera.h  console.c  console.h  editor.c  editor.h  entity.c  entity.h  framebuffer.c  framebuffer.h  game.c  game.h  geometry.c  geometry.h  gl_load.c  gl_load.h  glad.c  gui.c  gui.h  im_render.c  im_render.h  input.c  input.h  light.c  light.h  material.c  material.h  model.c  model.h  player.c  player.h  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  sprite.c  (+5 more)
src/system/: config_vars.c  config_vars.h  file_io.c  file_io.h  main.c  physics.h  platform.c  platform.h  sound.c  sound.h
tools/: clean_and_regen_project.bat  create_tag_from_release_build.bat  ed.bat  launch_cmd.lnk  launch_vs.bat  regen_project.bat  setup_env.bat
